Changes in 21.6 (not released yet)
===============
	* Minor typo (specificiation) fixed
	* Added closing bracket in fuser help
	* Added Finnish translation
	* Localised the yes/no prompts with rpmatch()
	* Fixed NLS problems and some double ))s - Thanks to Jakub Bogusz
	* Added Basque translation
	* More NLS related fixes - Thanks to Guillem Jover

Changes in 21.5
===============
2004-05-25 Craig Small <csmall@small.dropbear.id.au>
	* Sven Dahl provides a patch for using psmisc with uclibc
	* Sid flag in options is d not S. SF#791537
	* Fixed typo in checking ss_family SF#845292
	* Lines not truncated using UTF-8 SF Patch: #757164 Debian: #151523
	* Case insensitve matching with -I flags SF Patch: #740662
	* inode and devices use ino_t and dev_t SF#: 
	* Allow pstree to use ASCII characters with -A flag, patch by
	  Branden Robinson Debian: #240973
	* Debug "here" statement removed
	* POSIX -m option added, part of SF Bug: #901841
	* fuser sends PIDs only to stdout, the rest goes to stderr.
	  Changed for POSIX compatibility
	* Silently ignore -f option, for POSIX
	* Using automake 1.8 now
	* Built source signames.h not distributed in tar Debian: #240986
	* Manual page for fuser explains -SIG is ignored with no -k
	  Debian: #222935

2004-04-05  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(SUBDIRS): Remove intl.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): Add config.rpath.
	* configure.in (AC_CONFIG_FILES): Add m4/Makefile.

Changes in 21.4
===============
2003-11-28 Craig Small <csmall@small.dropbear.id.au>
	* Typos in killall.1 fixed Closes Debian: #198189
	* fuser -ki now tells user default is N Closes Debian: #197356
	* pstree -a doesn't print space at end of line Closes Debian: #182099
	* Works with new sort flags +2 -> -k 3 Thankyou Andrew Walrond
	* pstree.x11 now just pstree with a trick Closes Debian: #201042
	* Icons for pstree, thankyou Tatlin! Closes Debian: #192636
	* Removed message if no processes found, 